added swager
adding swagger complete
